packages/svelte/tests/validator/samples/reactive-statement-non-reactive-self-declaration/input.svelte
<script>
	let prop;
	$: {
		const obj = get_obj();
		prop = obj.prop;
	}
</script>

<p>{prop}</p>
